[package]
name = "tarmac"
description = "Manages assets for Roblox projects"
version = "0.1.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"
license = "MIT"

readme = "README.md"
repository = "https://github.com/rojo-rbx/tarmac"
homepage = "https://github.com/rojo-rbx/tarmac"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.0"
log = "0.4.8"
reqwest = "0.9.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8.0"
snafu = "0.5.0"
structopt = { version = "0.3", default-features = false }
toml = "0.5.3"
walkdir = "2.2.9"

[target.'cfg(windows)'.dependencies]
winreg = "0.6.2"
