[package]
name = "tarmac"
description = "Manages assets for Roblox projects"
version = "0.2.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"
license = "MIT"

readme = "README.md"
repository = "https://github.com/rojo-rbx/tarmac"
homepage = "https://github.com/rojo-rbx/tarmac"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	".",
	"packos",
]

default-members = [
	".",
	"packos",
]

[dependencies]
blake3 = "0.1.3"
env_logger = "0.7.0"
globset = "0.4.4"
lazy_static = "1.4.0"
log = "0.4.8"
png = "0.15.3"
regex = "1.3.3"
reqwest = "0.9.20"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
snafu = "0.6.0"
structopt = { version = "0.3", default-features = false }
toml = "0.5.3"
walkdir = "2.2.9"

packos = { path = "packos" }

[target.'cfg(windows)'.dependencies]
winreg = "0.6.2"
