[package]
name = "tarmac"
description = "Resource compiler and asset manager for Roblox projects"
version = "0.8.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"
license = "MIT"

readme = "README.md"
repository = "https://github.com/Roblox/tarmac"
homepage = "https://github.com/Roblox/tarmac"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace]
members = [".", "packos"]

default-members = [".", "packos"]

[dependencies]
packos = { path = "packos", version = "0.1.0" }

anyhow = "1.0.27"
backtrace = "0.3.46"
blake3 = "0.1.3"
env_logger = "0.7.0"
fs-err = "2.3.0"
globset = "0.4.4"
lazy_static = "1.4.0"
log = "0.4.8"
png = "0.15.3"
regex = "1.3.3"
reqwest = "0.9.20"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
structopt = { version = "0.3", default-features = false }
thiserror = "1.0.13"
toml = "0.5.3"
walkdir = "2.2.9"

[target.'cfg(windows)'.dependencies]
winreg = "0.6.2"
