[package]
name = "packos"
description = "Simple rectangle packing library"
version = "0.1.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/rojo-rbx/tarmac/tree/master/packos"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"

[dev-dependencies]
env_logger = "0.7.1"
insta = "0.13.1"
